// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon has custom class names 1`] = `
<svg
  className="er-ui-icon custom custom2"
>
  <use
    xlinkHref="#heart"
  />
</svg>
`;

exports[`Icon rendering successfully 1`] = `
<svg
  className="er-ui-icon"
>
  <use
    xlinkHref="#heart"
  />
</svg>
`;

exports[`icon has custom class names 1`] = `
<svg
  className="er-ui-icon custom custom2"
>
  <use
    xlinkHref="#heart"
  />
</svg>
`;

exports[`icon render successfully 1`] = `
<svg
  className="er-ui-icon"
>
  <use
    xlinkHref="#heart"
  />
</svg>
`;
